# uber-ride-demand-forecasting

./: .gitignore  README.md  RESEARCH_COMPARISON.md  build.py  pyproject.toml  requirements.txt
app/: dashboard.py  theme.py
ingest/: config.py  generate_data.py  model.py
tests/: test_pipeline.py
